# group8-project700

./: .gitignore  README.md
backend/: .gitignore  Makefile  README.md  __init__.py  index.php  manage.py  pyproject.toml
backend/allocation/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/allocation/migrations/: 0001_initial.py
backend/dashboard/: apps.py  urls.py
backend/eoi/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/eoi/migrations/: 0001_initial.py  0002_eoiapp_availability_eoiapp_preference_and_more.py  0003_add_eoiapp_extra_fields.py
backend/frontend/src/pages/: UsersManagementPage.jsx
backend/frontend/templates/: allocationdetails.html  allocationunits.html  home.html  index.html  tutor_list.html  tutor_search.html  tutortimetable.html  unitdetails.html  users_admin.html
backend/imports/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/imports/management/commands/: import_eoi.py  import_master_classes.py  import_tutorial_allocations.py
backend/imports/migrations/: 0001_initial.py
backend/scripts/: create_superuser.py  database.sh
backend/semesters/: __init__.py  apps.py  middleware.py  models.py  router.py  serializers.py  services.py  state.py  threadlocal.py  urls.py  views.py
backend/timetable/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/timetable/migrations/: 0001_initial.py
backend/units/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/units/management/commands/: seed_courses.py  seed_skills.py  seed_units_courses.py
backend/units/migrations/: 0001_initial.py
backend/users/: API_DOCUMENTATION.md  admin.py  factory.py  models.py  permission.py  permissions.py  serializers.py  urls.py  views.py
backend/users/management/: permissions_matrix.csv
backend/users/management/commands/: assign_role.py  seed_campus.py  seed_permission.py
backend/users/migrations/: 0001_initial.py  0002_alter_campus_campus_name.py  0003_alter_campus_campus_name.py
backend/users/tests/: __init__.py  test_admin.py  test_factory.py  test_models.py  test_serializers.py  test_urls.py  test_views.py
backend/web_tutors/: apps.py  asgi.py  settings.py  urls.py  views_pages.py  wsgi.py
docs/: pseudo_code.md
frontend/: allocationdetails.html  home.html  index.html  unitdetails.html
frontend/templates/: index.html
